# DG-LTS-Maxwell

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  ENROOT.md  README.md
1D-example/: CMakeLists.txt
1D-example/assembling/: Assembler1D.cpp  Assembler1DLocal.cpp  Assembler1DLocal.h  CMakeLists.txt
1D-example/assembling/include/: Assembler1D.h
1D-example/convergence/: CMakeLists.txt  convergence_cavity_1D.cpp
1D-example/data/: CMakeLists.txt  Solutions1D.cpp
1D-example/data/include/: Solutions1D.h
TE-example/: CMakeLists.txt
TE-example/LTSvsLI/: CMakeLists.txt  comparision_LTS_LI.cpp
TE-example/Temporary/: CMakeLists.txt  VectorMassOperator.cpp  VectorMassOperator.h
TE-example/convergence/: CMakeLists.txt  convergence_space_time_cavity.cpp  convergence_time_cavity.cpp
TE-example/data/: CMakeLists.txt  SolutionTE.cpp
TE-example/data/include/: SolutionTE.h
python/: notebook_functions.py
python/1D/: plots.ipynb
python/TE/: plots.ipynb
timaxdg/: .gitignore  AUTHORS.md  CMakeLists.txt  README.md
timaxdg/assembling/: CMakeLists.txt
timaxdg/assembling/Assembler3D/: Assembler3D.cpp  Assembler3DLocal.cpp  Assembler3DLocal.h  CMakeLists.txt
timaxdg/assembling/Assembler3D/include/: Assembler3D.h
timaxdg/assembling/AssemblerTE/: AssemblerTE.cpp  AssemblerTELocal.cpp  AssemblerTELocal.h  CMakeLists.txt
timaxdg/assembling/AssemblerTE/include/: AssemblerTE.h
timaxdg/benchmark/: CMakeLists.txt  CurlAssemblyBenchmark.cpp  MassAssemblyBenchmark.cpp  README.md
timaxdg/data/: CMakeLists.txt  CavitySolution.cpp  PolynomialSolution.cpp
timaxdg/data/include/: CavitySolution.h  IsotropicConstant.h  PolynomialSolution.h
timaxdg/data_types/: CMakeLists.txt  LocallyImplicitOperators.h  VectorMassMatrix.cpp  VectorMassMatrix.h
timaxdg/docs/: Doxyfile.in
timaxdg/examples/: CMakeLists.txt
timaxdg/examples/3D/: CMakeLists.txt  Minimal.cpp  README.md
timaxdg/examples/3D/Polynomial/: CMakeLists.txt  Polynomial.cpp  README.md
timaxdg/examples/GenerateMatrix/: CMakeLists.txt  GenerateMatrix.cpp  README.md
timaxdg/examples/TE/: CMakeLists.txt  Minimal.cpp  README.md
timaxdg/examples/TE/LFC/: CMakeLists.txt  LFC.cpp
timaxdg/examples/TE/LocallyImplicit/: CMakeLists.txt  MinimalLocallyImplicit.cpp
timaxdg/examples/TE/Polynomial/: CMakeLists.txt  Polynomial.cpp  README.md
timaxdg/tests/: CMakeLists.txt
timaxdg/tests/assembling/: 3DMatrixAssemblingTest.cpp  TEMatrixAssemblingTest.cpp
timaxdg/time_integration/: CMakeLists.txt  CrankNicolson.h  CrankNicolson.hh  LTS_LFC.h  LTS_LFC.hh  Leapfrog.h  Leapfrog.hh  LeapfrogChebychev.h  LeapfrogChebychev.hh  LocallyImplicit.h  LocallyImplicit.hh  TimeIntegrator.h
timaxdg/tools/: CMakeLists.txt  NumberSpaces.cpp
timaxdg/tools/include/: LocallyImplicitReordering.h  NumberSpaces.h  OutputMatrix.h
